--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ designing and deploying using AWS services.Hands on experience in automating bui
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>05 Jan 1992</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>krishna.pahana.cloud</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8074256664</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hyderabad, India</span></li>
                 </ul>
