--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ designing and deploying using AWS services.Hands on experience in automating bui
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kishorepahana@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>WEBMATICS SOLUTIONS:</strong> <span>MID SENIOR DEVOPS ENGINEER</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>WESTLISOFT TECHLNOLGIES:</strong> <span>MID SENIOR DEVOPS ENGINEER</span></li>
                 </ul>
               </div>
             </div>
